--- a/project.html
+++ b/project.html
@@ -65,7 +65,7 @@ A cross section of praise and and worship at the <a class="dot" href="chika.html
 </section><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <h3><a class="spin" href="down.html">See More Stories</a></h3><br>
 <anoda id="anoda_bar">
-<center><a class="spi" href="bproject.html">Log out</a><center>
+<center><a class="spi" href="index.html">Log out</a><center>
 
 
 </anoda>
