--- a/cproject.html
+++ b/cproject.html
@@ -19,8 +19,8 @@
 </ul>
 </form>
 <center>You can<a class="btn" href="project.html">Log in</a></center>
-
 </section>
 </center>
 </body>
 </html>
+<!-- your indentation is poor -->
